--- a/laboratory_1/Relazione_1.tex
+++ b/laboratory_1/Relazione_1.tex
@@ -128,16 +128,34 @@ Arrotondando:
 \end{Large}\\
 
 \subsubsection{Tempo di salita con sonda non compensata e inserzione di una resistenza}
+
 \begin{Large}
 	\begin{equation}
-  		t_{r_R}= 7.1(\pm 0,00071 rdg \pm0.04 FSO)\mu s \pm200ps %TODO arrotondare
+		t_{r_R}= 7.1\mu s \pm 0,00071\mu s \pm0,04\mu s \pm200ps
+	\end{equation}
+\end{Large}\\
+
+Arrotondando: 
+
+\begin{Large}
+	\begin{equation}
+		t_{r_R}= 7.1\pm 0,041 \mu s
 	\end{equation}
 \end{Large}\\
 
 \subsubsection{Tempo di salita con sonda compensata 10x e inserzione di una resistenza}
+
 \begin{Large}
 	\begin{equation}
-  		{t_{r_{R_{10x}}}}= 1300(\pm 0,13 rdg \pm10 FSO)ns \pm200ps %TODO arrotondare
+		{t_{r_{R_{10x}}}}= 1300ns \pm 0,13ns \pm10ns \pm200ps
+	\end{equation}
+\end{Large}\\
+
+Arrotondando: 
+
+\begin{Large}
+	\begin{equation}
+		{t_{r_{R_{10x}}}}= 1300\pm 10,13 ns
 	\end{equation}
 \end{Large}\\
 
@@ -163,13 +181,6 @@ Diversamente dalle altre misure, il calcolo della capacità è una misura indire
 	\end{equation}
 \end{Large}\\
 
-In questo caso quindi l'incertezza si ricava sommando le incertezze relative delle misure dirette che la compongono il rapporto 
-\begin{Large}
-	\begin{equation}
-  		\frac{U_x}{|y|}= \frac{U_{x_1}}{|y_1|}+\frac{U_{x_2}}{|y_2|}=u_{x_1}+u_{x_2}=u_x
-	\end{equation}
-\end{Large}\\
-
 Quindi:
 \begin{Large}
 	\begin{equation}
@@ -177,15 +188,40 @@ Quindi:
 	\end{equation}
 \end{Large}\\
 
+In questo caso quindi l'incertezza si ricava sommando le incertezze relative delle misure dirette che la compongono il rapporto 
+\begin{Large}
+	\begin{equation}
+  		\frac{U_x}{|y|}= \frac{U_{x_1}}{|y_1|}+\frac{U_{x_2}}{|y_2|}=u_{x_1}+u_{x_2}=u_x
+	\end{equation}
+\end{Large}\\
+
+Quindi l'incertezza:
+\begin{Large}
+	\begin{equation}
+		{U_C}= (0,041+0.001 )[\frac{\mu s}{k\Omega}]= 0.42nF
+	\end{equation}
+\end{Large}\\
+
+In conclusione: 
+\begin{Large}
+	\begin{equation}
+		C=0.325\pm 0.42nF
+	\end{equation}
+\end{Large}\\
+
 \subsubsection{Capacità sistema sonda non compensata 10x e oscilloscopio }
 Si evita la rindondanza dei calcoli presenti precedentemente e si provvede ad eseguire il calcolo
 \begin{Large}
 	\begin{equation}
-  		C_{10x}= \frac{1.3}{9.9*ln(9)} [\frac{\mu s}{k\Omega}]= 0.059nF
+  		C_{10x}= \frac{1300}{9.9*ln(9)} [\frac{ns}{k\Omega}]= 59.688pF
 	\end{equation}
 \end{Large}\\
 
 \subsection{Tensione picco-picco segnale sinusoidale} %TODO MOLTO GROSSO
-
-
+Per quanto riguarda la misura della tensione picco-picco del segnale sinusoidale, si adopera il sistema verticale a due cursori con incertezza:
+\begin{Large}
+	\begin{equation}
+		U_{V_{p-p_{s}}}= [\pm 2.4\% rdg\pm 0.4\%]
+	\end{equation}
+\end{Large}\\
 \end{document}
