--- a/laboratory_2/Relazione_1.tex
+++ b/laboratory_2/Relazione_1.tex
@@ -15,36 +15,72 @@
 
 \maketitle
 
-\section {Incertezza su misure con metro estensibile}
+\section {Incertezza su grandezze dimensionali}
 
-Banana descrittiva del calcolo 
-
+Sapendo che l'incertezza sulle misure col centimetro è:
 \begin{Large} 
 	\begin{equation}
-		equazione qui
-		%U_{R} = [\pm 0.010\%rdg \pm 0.001\% FSO]
+		U_{l} = 2mm
+	 \end{equation}
+\end{Large}
+Si è calcolata lincertezza delle relative misure: 
+\begin{Large} 
+	\begin{equation}
+		l_a = 1180\pm2mm
+	 \end{equation}
+	 \begin{equation}
+		l_v = 1000\pm2mm
+	 \end{equation}
+\end{Large}
+Per quanto riguarda invece le misure effettuate col calibro digitale si ha: 
+\begin{Large} 
+	\begin{equation}
+		U_{calibro} = 0.01 + |0.02| = 0.03mm
+	 \end{equation}
+\end{Large}
+Si è calcolata lincertezza delle relative misure: 
+\begin{Large} 
+	\begin{equation}
+		w = 30.08\pm0.03mm
+	 \end{equation}
+	 \begin{equation}
+		h = 3.05\pm0.03mm
 	 \end{equation}
 \end{Large}
 
-\section {Incertezza su misure con calibro (digitale)}
+\section {Incertezza su grandezze elettriche, metodo voltamperometrico}
 
 Banana descrittiva del calcolo 
-
-\begin{Large} 
+\begin{Large}
 	\begin{equation}
-		equazione qui
-		%U_{R} = [\pm 0.010\%rdg \pm 0.001\% FSO]
+		R_{X2W_{2}} = 0.007 \Omega
+	 \end{equation}
+	\begin{equation}
+		U_{R_{X2W_{2}}} = [\pm 0.01\%rdg \pm 0.004\% FSO]
+	 \end{equation}
+	 \begin{equation}
+		R_{X2W_{2}} = 0.007 \pm 0.004 \Omega
 	 \end{equation}
 \end{Large}
 
-\section {Incertezza su misure indirette di lunghezza}
+\section {Incertezza su grandezze elettriche, metodo di confronto delle cadute di tensione}
 
-Banana descrittiva del calcolo 
+Prendiamo l'incertezza che ci riguarda per il multimetro Agilent 34410:
 
 \begin{Large} 
 	\begin{equation}
-		equazione qui
-		%U_{R} = [\pm 0.010\%rdg \pm 0.001\% FSO]
+		U_{V} = [\pm 0.0050\%rdg \pm 0.0035\% FSO]
 	 \end{equation}
 \end{Large}
+E quindi si ottiene:
+\begin{Large} 
+	\begin{equation}
+		U_{V_X} = 0.817 \pm 0.00354085 mV
+	 \end{equation}
+	 \begin{equation}
+		U_{V_C} = 0.503 \pm 0.00352515 mV
+	 \end{equation}
+\end{Large}
+
+
 \end{document}
