--- a/laboratory_2/Relazione_1.tex
+++ b/laboratory_2/Relazione_1.tex
@@ -47,6 +47,18 @@ Si è calcolata lincertezza delle relative misure:
 		h = 3.05\pm0.03mm
 	 \end{equation}
 \end{Large}
+Successivamente sono state effettuate le misure indirette:
+\begin{Large} 
+	\begin{equation}
+		S = h*w = 91.744 mm^2
+	 \end{equation}
+\end{Large}
+Con relativa incertezza:
+\begin{Large} 
+	\begin{equation}
+		U_{S} =S(\frac{U_h}{h}+\frac{U_w}{w})
+	 \end{equation}
+\end{Large}
 
 \section {Incertezza su grandezze elettriche, metodo voltamperometrico}
 
