prima parte finita

--- a/laboratory_2/Relazione_1.tex
+++ b/laboratory_2/Relazione_1.tex
@@ -59,6 +59,30 @@ Con relativa incertezza:
 		U_{S} =S(\frac{U_h}{h}+\frac{U_w}{w})
 	 \end{equation}
 \end{Large}
+E quindi: 
+\begin{Large} 
+	\begin{equation}
+		U_{S} =91.744\pm 0.993mm^2
+	 \end{equation}
+\end{Large}
+Invece:
+\begin{Large} 
+	\begin{equation}
+		S_L= 2l_a(h+w) = 78186.8 mm^2
+	 \end{equation}
+\end{Large}
+Con relativa incertezza:
+\begin{Large} 
+	\begin{equation}
+		U_{S_L} =2S_L\frac{U_{l_a}}{l_a}+2S_L\frac{(U_h+U_w)}{h+w}
+	 \end{equation}
+\end{Large}
+E quindi: 
+\begin{Large} 
+	\begin{equation}
+		U_{S_L} =78186.8\pm 548.24mm^2
+	 \end{equation}
+\end{Large}
 
 \section {Incertezza su grandezze elettriche, metodo voltamperometrico}
 
