--- a/laboratory_2/Relazione_1.tex
+++ b/laboratory_2/Relazione_1.tex
@@ -80,13 +80,36 @@ Con relativa incertezza:
 E quindi: 
 \begin{Large} 
 	\begin{equation}
-		S_L =78186.8\pm 548.2mm^2
+		S_L =78200.0\pm 500.0mm^2
+	 \end{equation}
+\end{Large}
+
+\begin{Large}
+	\begin{equation}
+		R_{X_{m}} =\frac{\varphi*l_v}{s}= 0.00019183815835 \Omega
+	 \end{equation}
+	\begin{equation}
+		U_{R_{X_{m}}} = \varphi\frac{U{l_v}}{l_v}+\varphi\frac{U_{S}}{S}
+	 \end{equation}
+	 \begin{equation}
+		R_{X_{m}} = (19183815835 \pm 4)10^{-14} \Omega
 	 \end{equation}
 \end{Large}
 
 \section {Incertezza su grandezze elettriche, metodo voltamperometrico}
 
-Banana descrittiva del calcolo 
+\begin{Large}
+	\begin{equation}
+		R_{X2W}= 1.89 \Omega
+	\end{equation}
+	\begin{equation}
+		U_{R_{X2W}} = [\pm 0.01\%rdg \pm 0.004\% FSO]
+	 \end{equation}
+	 \begin{equation}
+		R_{X2W} = 1.89 \pm 0.004 \Omega
+	 \end{equation}
+\end{Large}
+
 \begin{Large}
 	\begin{equation}
 		R_{X2W_{2}} = 0.007 \Omega
@@ -96,6 +119,54 @@ Banana descrittiva del calcolo
 	 \end{equation}
 	 \begin{equation}
 		R_{X2W_{2}} = 0.007 \pm 0.004 \Omega
+	 \end{equation}
+\end{Large}
+
+\begin{Large}
+	\begin{equation}
+		R_{X4W}= 0.1909 \Omega
+	\end{equation}
+	\begin{equation}
+		U_{R_{X4W}} = [\pm 0.01\%rdg \pm 0.004\% FSO]
+	 \end{equation}
+	 \begin{equation}
+		R_{X4W} = 0.1909\pm 0.006 \Omega
+	 \end{equation}
+\end{Large}
+
+\begin{Large}
+	\begin{equation}
+		I_{VA}= 4.9433 A
+	\end{equation}
+	\begin{equation}
+		U_{I_{VA}} = [\pm 0.3\%rdg \pm 10\% FSO]
+	 \end{equation}
+	 \begin{equation}
+		I_{VA} = 4.9433 \pm 0.5 A
+	 \end{equation}
+\end{Large}
+
+\begin{Large}
+	\begin{equation}
+		V_{VA}= 0.96 mV
+	\end{equation}
+	\begin{equation}
+		U_{V_{VA}} = [\pm 0.005\%rdg \pm 0.0035\% FSO]
+	 \end{equation}
+	 \begin{equation}
+		V_{VA} = 0.96 \pm 0.004 mV
+	 \end{equation}
+\end{Large}
+
+\begin{Large}
+	\begin{equation}
+		R_{X_{VA}}= 0.000194 \Omega
+	\end{equation}
+	\begin{equation}
+		U_{R_{X_{VA}}} = [\pm 0.010\%rdg \pm 0.004\% FSO]
+	 \end{equation}
+	 \begin{equation}
+		R_X{_{VA}} = 0.000194 \pm 0.004 \Omega
 	 \end{equation}
 \end{Large}
 
