finito quasi quasi

--- a/laboratory_2/Relazione_1.tex
+++ b/laboratory_2/Relazione_1.tex
@@ -212,10 +212,14 @@ Definiamo prima:
 \end{Large}
 \begin{Large} 
 	\begin{equation}
-		r = 1.624
+		r = 1.624 \pm 0.0113
 	 \end{equation}
 \end{Large}
-
+\begin{Large} 
+	\begin{equation}
+		R_{X_{CdT}} = R_c* r = 
+	 \end{equation}
+\end{Large}
 
 
 \end{document}
