--- a/laboratory_2/Relazione_1.tex
+++ b/laboratory_2/Relazione_1.tex
@@ -105,13 +105,17 @@ Con la relativa incertezza
 		R_{X_{m}} = (19183815835 \pm 4)10^{-14} \Omega
 	 \end{equation}
 \end{Large}
+
+
 \section{Dimensionamento $I_{max}$}
 Con il seguente programma in Matlab è stato possibile definire $I_{max}$
+
 \lstinputlisting{main.m}
+
 Con risultato: 
 \begin{Large}
 	\begin{equation}
-		R_{max} = A
+		I_{max} = 20.82 A
 	 \end{equation}
 \end{Large}
 \section {Incertezza su grandezze elettriche, metodo voltamperometrico}
