--- a/laboratory_2/Relazione_1.tex
+++ b/laboratory_2/Relazione_1.tex
@@ -135,7 +135,7 @@ Adoperando due morsetti si è arrivati alla misurazione della seguente resistenz
 		R_{X2W} = 0.189 \pm 0.004 \Omega
 	 \end{equation}
 \end{Large}
-Purtroppo però la misura è \emph{errata}: a causa delle resistenze dei due puntali, infatti esse come tutta la cavetteria hanno una resistenza interna.
+Purtroppo però la misura è \emph{errata} a causa delle resistenze dei due puntali, infatti esse come tutta la cavetteria hanno una resistenza interna.
 Il problema è fortunatamnete di facile risoluzione, compensando i puntali stessi. Ed ecco che si ottiene una misurazione più precisa.
 
 \begin{Large}
@@ -150,7 +150,7 @@ Il problema è fortunatamnete di facile risoluzione, compensando i puntali stess
 	 \end{equation}
 \end{Large}
 \subsection{Misura della resistenza mediante quanto morsetti}
-Quello che si è andato a misurare con quattro puntali è solamente la \emph{caduta di tensione} nel resistore: infatti il flusso di corrente misurato nei puntali è pressochè nullo:
+Quello che si è andato a misurare con quattro puntali è solamente la \emph{caduta di tensione} nel resistore; infatti il flusso di corrente misurato nei puntali è pressochè nullo.
 \begin{Large}
 	\begin{equation}
 		R_{X4W}= 0.1909 \Omega
@@ -249,26 +249,26 @@ Definiamo prima:
 \subsection{Calcolo del valore della resistenza del provino}
 \begin{Large} 
 	\begin{equation}
-		R_{X_{CdT}} = R_c* r = 0.0001624 \Omega
+		R_{X_{CdT}} = R_c* r = 0.1624 m\Omega
 	 \end{equation}
 	 \begin{equation}
 		U_{R_{X_{CdT}}} = U_{R_c}*r+R_c*U_r
 	 \end{equation}
 	 \begin{equation}
-		R_{X_{CdT}} = 0.0001624\pm 0.016 \Omega
+		R_{X_{CdT}} = 0.1624 m\Omega \pm 0.027 \mu\Omega
 	 \end{equation}
 \end{Large}
 
 \subsection{Calcolo della resistività del rame}
 \begin{Large} 
 	\begin{equation}
-		\rho_{X_{CdT}} = R_{X_{CdT}}*\frac{S}{l_V} = 1,48*10^{-8} \Omega*m
+		\rho_{X_{CdT}} = R_{X_{CdT}}*\frac{S}{l_V} = 1,489*10^{-8} \Omega*m
 	 \end{equation}
 	 \begin{equation}
 		U_{\rho_{X_{CdT}}} = \frac{S}{l_V}*U_{R_{X_{CdT}}}+\frac{R_{X_{CdT}}}{l_V}*U_S+\frac{S*R_{X_{CdT}}}{{l_V}^2}*U_{l_V}
 	 \end{equation}
 	 \begin{equation}
-		\rho_{X_{CdT}} = (1.48\pm 0.001)*10^{-8} \Omega*m
+		\rho_{X_{CdT}} = (1.489\pm 0.001)*10^{-8} \Omega*m
 	 \end{equation}
 \end{Large}
 
