hello darknes my old firend

--- a/laboratory_1/Relazione_1.tex
+++ b/laboratory_1/Relazione_1.tex
@@ -39,7 +39,7 @@ Per il calcolo dell'incertezza relativa alla resistenza si consulta la seguente 
 	\end{figure}
 \end{center}
 
-Il valore della resistenza letto sul multimetro è  9.9 k$\Omega$. Si sceglie il range appropriato per la misura (10 kOhm) e si leggono i valori di incertezza di lettura e di fondo scala.
+Il valore della resistenza letto sul multimetro è  9.8887 k$\Omega$. Si sceglie il range appropriato per la misura (10 kOhm) e si leggono i valori di incertezza di lettura e di fondo scala.
 
 \begin{Large} 
 	\begin{equation} 
@@ -47,7 +47,7 @@ Il valore della resistenza letto sul multimetro è  9.9 k$\Omega$. Si sceglie il
 	 \end{equation}
 	 
 	 \begin{eqnarray*} 
-	 	R = 9.9 \pm 0.0010 k\Omega 
+	 	R = 9.8887 \pm 0.0010 k\Omega 
 	 \end{eqnarray*}
 \end{Large}
 
@@ -87,19 +87,19 @@ Il numero di divisioni è 10, quindi:
 Quindi si ricava l'incertezza:
 \begin{Large}
 	\begin{equation}
-  		{t_r}= 5.5\mu s \pm 0,00055\mu s \pm0,04\mu s \pm200ps %TODO arrotondare
+  		{t_r}= 5.51\mu s \pm 0,00055\mu s \pm0,04\mu s \pm200ps %TODO arrotondare
 	\end{equation}
 \end{Large}\\
-Per rendere più elegante la scrittura del risultato senza intaccarne la validità, si decide di approssimarlo alla terza cifra decimale.
+Per rendere più elegante la scrittura del risultato senza intaccarne la validità, si decide di approssimarlo alla seconda cifra decimale.
 \begin{Large}
 	\begin{equation}
-  		{t_r}= 5.5\pm 0,041 \mu s
+  		{t_r}= 5.51\pm 0,04 \mu s
 	\end{equation}
 \end{Large}\\
 \subsubsection{Tempo di discesa con sonda non compensata}
 \begin{Large}
 	\begin{equation}
-  		{t_f}= 5.7\mu s \pm 0,00057\mu s \pm0,04\mu s \pm200ps
+  		{t_f}= 5.71\mu s \pm 0,00057\mu s \pm0,04\mu s \pm200ps
 	\end{equation}
 \end{Large}\\
 
@@ -107,7 +107,7 @@ Arrotondando:
 
 \begin{Large}
 	\begin{equation}
-  		{t_f}= 5.7\pm 0,041 \mu s
+  		{t_f}= 5.71\pm 0,04 \mu s
 	\end{equation}
 \end{Large}\\
 
@@ -123,7 +123,7 @@ Arrotondando:
 
 \begin{Large}
 	\begin{equation}
-		{t_{r_{10x}}}= 975\pm 10,098 ns
+		{t_{r_{10x}}}= 975\pm 10 ns
 	\end{equation}
 \end{Large}\\
 
@@ -131,7 +131,7 @@ Arrotondando:
 
 \begin{Large}
 	\begin{equation}
-		t_{r_R}= 7.1\mu s \pm 0,00071\mu s \pm0,04\mu s \pm200ps
+		t_{r_R}= 7.11\mu s \pm 0,00071\mu s \pm0,04\mu s \pm200ps
 	\end{equation}
 \end{Large}\\
 
@@ -139,7 +139,7 @@ Arrotondando:
 
 \begin{Large}
 	\begin{equation}
-		t_{r_R}= 7.1\pm 0,041 \mu s
+		t_{r_R}= 7.11\pm 0,04 \mu s
 	\end{equation}
 \end{Large}\\
 
@@ -155,7 +155,7 @@ Arrotondando:
 
 \begin{Large}
 	\begin{equation}
-		{t_{r_{R_{10x}}}}= 1300\pm 10,13 ns
+		{t_{r_{R_{10x}}}}= 1300\pm 10 ns
 	\end{equation}
 \end{Large}\\
 
@@ -173,7 +173,7 @@ Arrotondando:
 
 \begin{Large}
 	\begin{equation}
-		{T_s}= 1000 \pm 4.1\mu s 
+		{T_s}= 1000 \pm 4\mu s 
 	\end{equation}
 \end{Large}\\
 
@@ -194,7 +194,7 @@ Quindi l'incertezza:
 \end{Large}\\
 \begin{Large}
 	\begin{equation}
-  		{f_s}= 1000\pm 4.1Hz
+  		{f_s}= 1000\pm 4Hz
 	\end{equation}
 \end{Large}\\
 
@@ -259,7 +259,7 @@ Quindi l'incertezza:
 Quindi in conclusione:
 \begin{Large}
 	\begin{equation}
-		{C_{10x}}= 59.688 \pm0.472 pF
+		{C_{10x}}= 59.7 \pm0.5 pF
 	\end{equation}
 \end{Large}\\
 
@@ -281,7 +281,7 @@ Quindi:
 Arrotondando:
 \begin{Large}
 	\begin{equation}
-		V_{p-p_{s}}= 3.938\pm 0.127V
+		V_{p-p_{s}}= 3.94\pm 0.13V
 \end{equation}
 \end{Large}\\
 
