--- a/laboratory_2/Relazione_1.tex
+++ b/laboratory_2/Relazione_1.tex
@@ -79,13 +79,13 @@ Invece:
 Con relativa incertezza:
 \begin{Large} 
 	\begin{equation}
-		U_{S_L} =2S_L\frac{U_{l_a}}{l_a}+2S_L\frac{(U_h+U_w)}{h+w}
+		U_{S_L} =\frac{dS_L}{dl_a}U_{l_a}+\frac{dS_L}{dw}U_w+\frac{dS_L}{dh}U_h=274.12 mm^2
 	 \end{equation}
 \end{Large}
 E quindi: 
 \begin{Large} 
 	\begin{equation}
-		S_L =78200.0\pm 500.0mm^2
+		S_L =78200\pm 300mm^2
 	 \end{equation}
 \end{Large}
 \subsection{Stima del valore del provino in rame}
@@ -226,24 +226,13 @@ E quindi si ottiene:
 \end{Large}
 \begin{Large} 
 	 \begin{equation}
-		U_{r} = U_{O}|\frac{1}{V_X}-\frac{1}{V_C}|+(U_{inl}+U_q)(\frac{1}{|V_X|}+\frac{1}{|V_C|})
+		U_{r} = (\frac{U_{V_X}}{V_X}+\frac{U_{V_C}}{V_C})r = 0.02086
 	 \end{equation}
 \end{Large}
-Definiamo prima:
-\begin{Large}
-	\begin{equation}
-		U_O= 0
-	 \end{equation}
-	 \begin{equation}
-		U_{inl} = 3.49 \mu V
-	 \end{equation}
-	 \begin{equation}
-		U_{q} = \frac{Q}{2}= \frac{FS}{2(n\ digit)}=10nV
-	 \end{equation}
-\end{Large}
+Otteniamo:
 \begin{Large} 
 	\begin{equation}
-		r = 1.624 \pm 0.011
+		r = 1.62 \pm 0.02
 	 \end{equation}
 \end{Large}
 \subsection{Calcolo del valore della resistenza del provino}
