add titolo carino

--- a/exercise_1/Relazione_1.tex
+++ b/exercise_1/Relazione_1.tex
@@ -1,4 +1,9 @@
 \documentclass[a4paper]{article}
+\usepackage[utf8]{inputenc}
+\usepackage{graphicx}
+\usepackage{array}
+\usepackage{calc}
+\usepackage{layout}
 
 \title{\textbf{Calcolatore di incertezza per multimetri digitali}\\ {\normalsize - Esercitazione 1 -}}
 \author{Andrea Lops\\
@@ -6,10 +11,10 @@
 		Laura Loperfido\\
 		Teresa Pantone}
 \date{}
+
 \begin{document}
 
 \maketitle
-
 \section{Flow dello script}
 
 Lo script è composto da 5 sezioni:\begin{itemize}
