--- a/main.tex
+++ b/main.tex
@@ -10,13 +10,13 @@
 	\layout
 \title{\begin{center}
 		\setlength{\tabcolsep}{0pt}
-		\begin{tabular}{>{\raggedleft}m{2.5cm}>{\centering}m{\textwidth - 5cm\relax}>{\raggedright}m{2.5cm}}
-			\includegraphics[width=\linewidth]{source/poliba.png}%
+		\begin{tabular}{>{\raggedleft}m{3cm}>{\centering}m{\textwidth - 5cm\relax}>{\raggedright}m{2.5cm}}
+			\includegraphics[width=\linewidth]{/source/poliba.png}%
 			&%
 			\textbf{ } \\[5pt]%
 			\textbf{\ }%
 			&%
-			\includegraphics[width=\linewidth]{source/dei.png} %
+			\includegraphics[width=\linewidth]{/source/dei.png} %
 		\end{tabular}
 	\end{center}
 	\textbf{Raccolta di relazioni\\}
