--- a/laboratory_1/Relazione_3.tex
+++ b/laboratory_1/Relazione_3.tex
@@ -1,15 +1,47 @@
 \documentclass[a4paper]{article}
 
-\title{\textbf{Relazione attività di laboratorio}\\{\normalsize - Esercitazione 1 -}}
-\author{Andrea Lops\\
-		Paolo Rotolo\\
-		Laura Loperfido\\
-		Teresa Pantone
-	   }
-		
+\usepackage{graphicx}
+\usepackage{amsfonts}
+\usepackage{geometry}
+\usepackage[utf8]{inputenc}
+\usepackage{array}
+\usepackage{calc}
+\usepackage{layout}
+\geometry{
+	a4paper,
+	total={170mm,257mm},
+	left=15mm,
+	top=15mm,
+}
+
+
+\title{\begin{center}
+		\setlength{\tabcolsep}{0pt}
+		\begin{tabular}{>{\raggedleft}m{3cm}>{\centering}m{\textwidth - 5cm\relax}>{\raggedright}m{3cm}}
+			\includegraphics[width=\linewidth]{poliba.png}%
+			&%
+			\textbf{ } \\[5pt]%
+			\textbf{\ }%
+			&%
+			\includegraphics[width=\linewidth]{dei.png} %
+		\end{tabular}
+	\end{center}
+	\textbf{Relazione attività di laboratorio\\}
+	\textbf{\large Esercitazione 1\\- Corso di Fondamenti delle Misurazione -\\ }
+	{\normalsize 
+		- Ingegneria Informatica e dell'Automazione -
+}}
+\author{A cura di:\\
+	Laura Loperfino\\
+	Andrea Lops \\
+	Teresa Pantone\\
+	Paolo Rotolo\\
+	\\
+	Prof. Ing. Filippo Attivissimo
+}
+
 \date{29/11/2018}
 
-\usepackage{graphicx}
 
 \begin{document}
 
