Introducing the introdution

--- a/laboratory_1/Relazione_3.tex
+++ b/laboratory_1/Relazione_3.tex
@@ -47,6 +47,10 @@
 
 \maketitle
 
+\section{Introduzione}
+
+Lo scopo di questa esercitazione consiste nell'effettuare differenti misure, dirette e non, con gli strumenti tipici di un laboratorio quale multimetro e oscilloscopio,  interpretando in modo corretto i valori dati dal datasheet di ogni strumento per estrapolare le informazioni necessarie ad esprimere queste in modo coerente e corretto.
+
 \section{Calcoli}
 
 Per poter calcolare le incertezze richieste abbiamo usato le seguenti \emph{formule}:\\
