fix teresa's coses PDM

--- a/laboratory_2/Relazione_4.tex
+++ b/laboratory_2/Relazione_4.tex
@@ -290,10 +290,10 @@ Otteniamo:
 		R_{X_{CdT}} = R_c* r = 0.1624 m\Omega
 	 \end{equation}
 	 \begin{equation}
-		U_{R_{X_{CdT}}} = U_{R_c}*r+R_c*U_r
+		U_{R_{X_{CdT}}} =(\frac{U_{R_c}}{R_c}+ \frac{U_r}{r})R_{X_{CdT}}= 0.00201 m\Omega
 	 \end{equation}
 	 \begin{equation}
-		R_{X_{CdT}} = 0.1624 m\Omega \pm 0.027 \mu\Omega
+		R_{X_{CdT}} = 0.162 \pm 0.002  m\Omega
 	 \end{equation}
 \end{Large}
 
